<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_sync">

        <Preference
            android:key="export_to_drive"
            android:title="@string/settings_export_to_drive"
            android:summary="@string/settings_export_to_drive_summary"/>

        <Preference
            android:key="import_from_drive"
            android:title="@string/settings_import_from_drive"
            android:summary="@string/settings_import_from_drive_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_notification">

        <SwitchPreference
            android:key="notification_state"
            android:title="@string/settings_show_notifications"
            android:summaryOn="@string/settings_show_notifications_summary_on"
            android:summaryOff="@string/settings_show_notifications_summary_off"
            android:defaultValue="true"/>

        <Preference
            android:dependency="notification_state"
            android:key="notification_time"
            android:title="@string/settings_set_notification_time"
            android:summary="@string/settings_set_notification_time_summary"/>

        <RingtonePreference
            android:dependency="notification_state"
            android:key="notification_ringtone"
            android:title="@string/settings_set_notification_ringtone"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"/>

        <SwitchPreference
            android:dependency="notification_state"
            android:key="notification_vibrate"
            android:title="@string/settings_set_notification_vibrate"
            android:summaryOn="@string/settings_set_notification_vibrate_summary_on"
            android:summaryOff="@string/settings_set_notification_vibrate_summary_off"
            android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>